<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EditPhaseDialog</class>
 <widget class="QDialog" name="EditPhaseDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>443</width>
    <height>221</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Phase Properties</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="leftMargin">
    <number>8</number>
   </property>
   <property name="topMargin">
    <number>4</number>
   </property>
   <property name="rightMargin">
    <number>4</number>
   </property>
   <property name="bottomMargin">
    <number>4</number>
   </property>
   <item>
    <layout class="QFormLayout" name="formLayout">
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>Fraction</string>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Select Crystal Structure</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QComboBox" name="xtalCombo">
       <item>
        <property name="text">
         <string>Hexagonal</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Cubic</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Hexagonal (Low)</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Cubic (Low)</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Triclinic</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Monoclinic</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Orthorhombic</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Tetragonal (Low)</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Tetragonal</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Trigonal (Low)</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Trigonal</string>
        </property>
       </item>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="phaseFraction"/>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>Calculated Phase Fraction</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QLabel" name="calcPhaseFraction">
       <property name="text">
        <string>0.0</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="phaseTypeComboLabel">
       <property name="text">
        <string>Select Phase Type</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1">
      <widget class="QComboBox" name="phaseTypeCombo">
       <item>
        <property name="text">
         <string>Primary</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Precipitate</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Matrix</string>
        </property>
       </item>
      </widget>
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="pptFractionLabel">
       <property name="text">
        <string>Fraction of Precipitate on Boundary</string>
       </property>
      </widget>
     </item>
     <item row="4" column="1">
      <widget class="QLineEdit" name="pptFraction"/>
     </item>
     <item row="5" column="0">
      <widget class="QLabel" name="ParentPhaseLabel">
       <property name="text">
        <string>Parent Phase</string>
       </property>
      </widget>
     </item>
     <item row="5" column="1">
      <widget class="QLineEdit" name="ParentPhase"/>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>EditPhaseDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>EditPhaseDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
